--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker</li>
-        <li>Assemble</li>
+        <li>Ansible</li>
+        <li>Integración Continua</li>
     </ul>
 
 
